# gdrive-mcp-server

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
plans/: INDEX.md
src/gdrive_mcp_server/: auth.py  server.py
src/gdrive_mcp_server/tools/: add_document.py  export.py  search.py
tests/integration/: test_integration.py
tests/unit/: test_add_document.py  test_export.py  test_search.py
